--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,9 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+#github steps to fist commit
+git add .
+git add -u
+git commit -m "First commit"
+git push origin master
